--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
+  "scripts": {
+    "build": "tsc -p tsconfig.server.json",
+    "start": "node dist/index.js"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
