--- a/server/tsconfig.server.json
+++ b/server/tsconfig.server.json
@@ -8,6 +8,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["./index.ts", "./**/*.ts"],
+  "include": ["index.ts", "**/*.ts"],
   "exclude": ["dist", "node_modules", "**/*.test.ts"]
 }
