--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "db:push": "drizzle-kit push"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.server.json",
-    "start": "node dist/index.js"
+    "build": "tsc -p ./server/tsconfig.server.json",
+    "start": "node ./server/dist/index.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
